2017-11-03 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
        * DBSFTypeWrappers.m
	* DBSoap.m
        Simplify initializers and uniform to initWithSFString when parsing results.

2017-11-02 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
        * DBSFTypeWrappers.m
	* DBSoap.m
        Date and DateTime types.

2017-11-01 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
        * DBSFTypeWrappers.m
	* DBSoap.m
	* DBHTMLWriter.m
        Handle Percentage.

2017-11-01 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
        * DBSFTypeWrappers.m
        Implement missing class methods.

	* DBSoap.m
        Initialize DBSFDataTypes better.

2017-10-31 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	* DBSoap.h
	Fix setting of enableFieldTypesDescribeForQuery and add accessor.

2017-10-30 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Extract object and result parsing into adjustFormatForField and extractQueryRecords

2017-10-30 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	* DBHTMLWriter.m
	Don't choke on arrays of objects coming from nested queries.

2017-10-23 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.m
	Expand compound address fields.

2017-10-22 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (adjustFormatForField)
	First check for known datatypes, then expand Dictionaries.
	Addresses are complex datatypes and we keep them together.

2017-10-22 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Accessors for object describe cache and setting.

	* DBSoapCSV.m
	Carry over object cache.

2017-10-22 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.m (formatComplexObject:)
	Skip Id field only if it is an empty string, not otherwise.

	* DBSObject.m (description)
	Output type too.

	* DBSoap.m (adjustFormatForField)
	Handle complex objects and distiguish between SF objects and special types like Addresses.

2017-10-18 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.m (formatComplexObject:)
	Cleanup and optimize nested Field Name concatenation.
