@@ -1,3 +1,8 @@
+2017-11-09 Riccardo Mottola <rm@gnu.org>
+
+	* DBCSVReader.m
+	Don't choke with an empty file.
+
 2017-11-03 Riccardo Mottola <rm@gnu.org>
 
 	* DBSFTypeWrappers.h
